# sdrpp-noise-reduction

./: README.md  pyproject.toml  requirements.txt
src/sdrpp_noise_reduction/: __init__.py  audio_output.py  audio_processor.py  cli.py  commands.py  config.py  constants.py  udp_receiver.py  utils.py
